# sql_convert_tool

./: README.md  pyproject.toml  requirements.txt
sql_convert_tool/: main.py
tests/: test.py
