[tool.poetry]
name = "sql-convert-tool"
version = "0.1.0"
description = ""
authors = ["Niwaiwa <po2846@gmail.com>"]
readme = "README.md"
packages = [{include = "sql_convert_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlparse = "^0.4.4"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
